PuzzleVision - Added COM Listener, Tested COMs
Added listeners so that I can use the COM ports effectively.
Added an exit listener that will allow me to clean up before
the program ultimately exits. Tested COMs with a simple C
script, added message framing to ensure I always read the
correct number of Bytes.

PuzzleVision

--- a/src/main/resources/system/system.properties
+++ b/src/main/resources/system/system.properties
@@ -1,2 +1,4 @@
+## Default properties for the COM values
 puzzlevision.com.port = COM6
-puzzlevision.baud.rate = 57600
+puzzlevision.com.baud = 57600
+puzzlevision.com.length = 16
